[package]
name = "wait-counter"
version = "0.1.1"
edition = "2024"
description = "A counter allow you to wait, and return when it reach 1"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "sync"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time"] }