[package]
name = "wait-counter"
version = "0.1.2"
edition = "2024"
description = "A counter allow you to wait, and return when it reach 1"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }